# ocaml-slurm

./: .gitignore  README.md  dune-project  ocaml-slurm.opam
lib/: dune  slurm_rest.ml  slurm_rest.mli
